traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:10: error: not found: value j
      setPos(i,j);
               ^